<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="body">Body</string>
    <string name="add">+</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort by:</string>
    <string name="find">Find by tag:</string>
    <string name="bodyNotFilledError">Body should be filled.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
