<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="match_parent"
                            android:text="@string/sort"
                            android:padding="10dp"/>
                        <Spinner
                            android:id="@+id/sortSpinner"
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:layout_height="match_parent"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="10">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="match_parent"
                            android:text="@string/find"
                            android:padding="10dp"/>
                        <EditText
                            android:id="@+id/tagFindEdit"
                            android:layout_width="0dp"
                            android:layout_weight="7"
                            android:layout_height="match_parent"/>
                    </LinearLayout>

                </LinearLayout>

            <fragment
                android:id="@+id/notesListFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.example.notes.fragments.NoteListFragment"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:onClick="addButtonClick"
        android:text="@string/add"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:tint="@color/black"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>